Add rubik font and customize scroll bar in display

--- a/desafio05_calculadora/src/styles/globals.css
+++ b/desafio05_calculadora/src/styles/globals.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    -webkit-font-smoothing: antialiesad;
+}
+
+body, button, span {
+    @apply font-Rubik;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #121214;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #7c7c8a;
+    border-radius: 100vh;
+    border: 1px solid #202024;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #c4c4cc;
+}
+
+::-ms-reveal {
+    display: none;
+}
