--- a/desafio30_movieRecommendations/style.css
+++ b/desafio30_movieRecommendations/style.css
@@ -1,5 +1,20 @@
-
 :root {
+  --color-primary: #FFFFFF;
+  --color-highlight: #FEEA35;
+
+  --color-gray900: #1E1F28;
+  --color-gray700: #2B2B37;
+  --color-gray500: #373745;
+  --color-gray300: #8B8D9B;
+
+  --textSize-title: 20px;
+  --textSize-text: 12px;
+  --textSize-button: 16px;
+  --textSize-note: 16px;
+
+  --lineHeight-title: 120%;
+  --lineHeight-page: 20px;
+
 }
 
 * {
@@ -8,6 +23,156 @@
   box-sizing: border-box;
 }
 
-body {
+body,
+button {
   font-family: 'Outfit', sans-serif;
+}
+
+body {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+
+  color: var(--color-primary);
+  background: var(--gradientes-gradiente-hover, linear-gradient(90deg, #9F55FF 0%, #FF46B9 100%));
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 16px;
+  padding: 64px 96px;
+
+  background: var(--cores-cinza-dark, #1E1F28);
+  box-shadow: 0px -3px 22px 0px rgba(0, 0, 0, 0.35);
+
+  position: relative;
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  background: linear-gradient(120deg, #c497ff 30%, #9947ff 100%);
+  padding: 8px;
+  width: 100%;
+  height: 100%;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  border-radius: 16px;
+  z-index: -1;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 654px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-bottom: 36px;
+}
+
+header button {
+  border: none;
+
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 8px 16px;
+
+  color: var(--color-primary);
+  font-size: var(--textSize-button);
+  font-weight: var(--lineHeight-page);
+
+  border-radius: 4px;
+  background: var(--gradientes-gradiente-normal, linear-gradient(90deg, #8323FF 0%, #FF2DAF 100%));
+}
+
+.movies {
+  display: flex;
+  gap: 36px;
+}
+
+.movie {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  max-width: 194px;
+}
+
+.title,
+.duration,
+.year,
+.movie button,
+.title div {
+  display: flex;
+  align-items: center;
+}
+
+.info,
+.title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.title span {
+  /* Limitando o tamanho do título do filme e adicionando "..." qndo o titulo for maior que o tamanho limite */
+  max-width: 130px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
+  font-size: var(--lineHeight-title);
+  line-height: var(--lineHeight-page);
+  font-weight: 500;
+}
+
+.title>div {
+  color: var(--color-highlight);
+  font-family: var(--textSize-note);
+  font-weight: 600;
+  line-height: 14px;
+}
+
+.movie button {
+  justify-content: center;
+  gap: 8px;
+}
+
+div.poster>img {
+  width: 194px;
+  height: 289px;
+}
+
+.info {
+  color: var(--color-gray300)
+}
+
+.duration,
+.year {
+  font-size: var(--textSize-text);
+  line-height: var(--lineHeight-page);
+
+  gap: 4px;
+}
+
+.movie button {
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  background: var(--cores-cinza, #2B2B37);
+  color: var(--color-primary);
+  font-size: var(--textSize-button);
+  line-height: var(--lineHeight-page);
 }
